--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %} 
   <h1>{{ group }}</h1>
@@ -6,6 +7,9 @@
     {% for post in page_obj %}
       <br>Автор: {{ post.author.get_full_name }},
       <br>Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p>{{ post.text|linebreaksbr }}</p>
       {% if not forloop.last %}
       <hr>
