--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %} {{ post|truncatechars:30 }} {% endblock %}
 {% block content %}
   <div class="container py-5">
@@ -12,17 +13,17 @@
             <li class="list-group-item">
               Группа: {{ post.group.title }}: {{ post.group.description }}
               <br>
-              <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
+              <a class="btn btn-primary" href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
             </li>
           {% endif %}
           <li class="list-group-item">
             Автор: {{ post.author.get_full_name }}
           </li>
           <li class="list-group-item">
-            Всего постов пользователя: {{ posts_count }}
+            Всего постов пользователя: {{ post.author.posts.count }}
           </li>
           <li class="list-group-item">
-            <a href="{% url 'posts:profile' post.author.username %}">Все посты пользователя</a>
+            <a class="btn btn-primary" href="{% url 'posts:profile' post.author.username %}">Все посты пользователя</a>
           </li>
         </ul>
       </aside>
@@ -31,6 +32,11 @@
         {% if post.author == request.user %}
           <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">Редактировать запись</a>
         {% endif %}
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
+        <p>{{ post.text }}</p>
+        <a class="btn btn-primary" href="{% url 'posts:post_detail' post.pk %}">Подробная информация</a>
       </article>
     </div>
   </div>
