--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}{{ author.get_full_name }} Профайл пользователя{% endblock %}
 
 {% block content %}       
@@ -11,11 +12,14 @@
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
       </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p> {{ post.text }}</p>
-      <a href="{% url 'posts:post_detail' post.pk %}">Подробная информация</a>
+      <a class="btn btn-primary" href="{% url 'posts:post_detail' post.pk %}">Подробная информация</a>
       <br>
       {% if post.group %}   
-        <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
+        <a class="btn btn-primary" href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
       {% endif %}
     </article>
     {% if not forloop.last %}<hr>{% endif %}
