--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -24,7 +24,7 @@
               {% endfor %}
           {% endif %}
 
-          <form method="post"
+          <form method="post" enctype="multipart/form-data"
             {% if action_url %}
               action="{% url action_url %}"
             {% endif %}
