Сделал подписку на автора

--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load thumbnail %}
 {% block title %}{{ author.get_full_name }} Профайл пользователя{% endblock %}
 
 {% block content %}       
     <h1>Все посты пользователя {{ author.get_full_name }}</h1>
-    <h3>Всего постов: {{ page_obj.paginator.count }}</h3>   
+    <h3>Всего постов: {{ page_obj.paginator.count }}</h3> 
+    {% if following %}
+      <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">
+        Отписаться
+      </a>
+    {% else %}
+      <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">
+        Подписаться
+      </a>
+   {% endif %}  
     {% for post in page_obj %}
     <article>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
