--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
+  {% include 'posts/includes/switcher.html' %}
   {% for post in page_obj %}
     {% include 'posts/includes/post_list.html' %}
     {% if post.group %}
